--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,1 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=root
-DB_NAME=voter_verification
+DATABASE_URL=postgresql://testdb_owner:npg_qTPFD1Isi3be@ep-yellow-scene-a5mv74d9-pooler.us-east-2.aws.neon.tech/testdb?sslmode=require
