--- a/package.json
+++ b/package.json
@@ -1,38 +1,29 @@
 {
-  "name": "voter-verification-dashboard",
+  "name": "voter-verification-app",
+  "version": "1.0.0",
+  "description": "Monorepo for voter verification application",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "install:backend": "cd backend && npm install",
+    "install:frontend": "cd frontend && npm install",
+    "install:all": "npm run install:backend && npm run install:frontend",
+    "start:backend": "cd backend && node server.js",
+    "dev:frontend": "cd frontend && npm run dev",
+    "build:frontend": "cd frontend && npm run build",
+    "preview:frontend": "cd frontend && npm run preview",
+    "lint:frontend": "cd frontend && npm run lint",
+    "start:dev": "concurrently \"npm run start:backend\" \"npm run dev:frontend\"",
+    "start:prod": "concurrently \"npm run start:backend\" \"npm run preview:frontend\""
+
   },
-  "dependencies": {
-    "dotenv": "^16.4.7",
-    "lucide-react": "^0.344.0",
-    "pg": "^8.14.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3",
-    "recharts": "^2.12.2",
-    "socket.io-client": "^4.7.4"
-  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@eslint/js": "^9.9.1",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^9.9.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.11",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.3.0",
-    "vite": "^6.2.3"
-  }
+    "concurrently": "^8.2.2"
+  },
+  "workspaces": [
+    "backend",
+    "frontend"
+  ]
 }
