--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "preview:frontend": "cd frontend && npm run preview",
     "lint:frontend": "cd frontend && npm run lint",
     "start:dev": "concurrently \"npm run start:backend\" \"npm run dev:frontend\"",
-    "start:prod": "concurrently \"npm run start:backend\" \"npm run preview:frontend\""
+    "start:prod": "npm run preview:frontend"
 
   },
   "keywords": [],
