--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:frontend": "cd frontend && npm run build",
     "preview:frontend": "cd frontend && npm run preview",
     "lint:frontend": "cd frontend && npm run lint",
-    "start:dev": "concurrently \"npm run start:backend\" \"npm run dev:frontend\"",
+    "dev": "concurrently \"npm run start:backend\" \"npm run dev:frontend\"",
     "start:prod": "npm run preview:frontend"
 
   },
