--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start:backend": "cd backend && node server.js",
     "dev:frontend": "cd frontend && npm run dev",
-    "build:frontend": "cd frontend && npm run build",
-    "preview:frontend": "cd frontend && npm run preview",
+    "build": "cd frontend && npm run build",
+    "preview": "cd frontend && npm run preview",
     "lint:frontend": "cd frontend && npm run lint",
     "dev": "concurrently \"npm run start:backend\" \"npm run dev:frontend\"",
     "start:prod": "npm run preview:frontend"
