--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "private": true,
   "scripts": {
     "start:backend": "cd backend && node server.js",
-    "dev:frontend": "cd frontend && npm run dev",
-    "build": "cd frontend && npm run build",
-    "preview": "cd frontend && npm run preview",
-    "lint:frontend": "cd frontend && npm run lint",
+    "dev:frontend": "cd frontend && vite",
+    "build": "cd frontend && vite build",
+    "preview": "cd frontend && vite preview",
+    "lint": "cd frontend && eslint",
     "dev": "concurrently \"npm run start:backend\" \"npm run dev:frontend\"",
     "start:prod": "npm run preview:frontend"
 
