--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "cd frontend && vite preview",
     "lint": "cd frontend && eslint",
     "dev": "concurrently \"npm run start:backend\" \"npm run dev:frontend\"",
-    "start:prod": "npm run preview:frontend"
+    "start:prod": "npm run preview"
 
   },
   "keywords": [],
